# spaneval

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
data/: eval.jsonl  train.jsonl
docs/: README.md  character_count.md  entity_count.md  matching.md  results.md
examples/: dspy.ipynb  dspy_ner_optimization.ipynb  goals.py  quickstart.ipynb  quickstart.py
scripts/: prepare_conll2003.py
spaneval/: __init__.py  entity.py  evaluator.py  metrics.py  results.py  strategies.py  toy_data.py
tests/: test_entity.py  test_evaluator.py  test_matcher.py  test_metrics.py  test_nervaluate_parity.py  test_results.py  test_strategies.py
